just finished inserting the alert text

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         
     <p id="temp">Never use an insecure password again.</p>
     <div class="btn">
-        <button onclick="generate()">Generate passwords</button>
-        <button onclick="reset()">Reset passwords</button>
+        <button id="generate-btn">Generate passwords</button>
+        <button id="reset-btn">Reset passwords</button>
     </div>
     <div class="divider"></div>
     <div class="ptags">
